--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# Desenvolvimento (backend em outra porta)
 VITE_API_URL=http://localhost:4000
+
+# Produção (deixe vazio se o backend servir o frontend no mesmo domínio)
+# VITE_API_URL=
